--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,5 +1,3 @@
-#.github/workflows/deploy.yml
-
 name: 'Terraform CI/CD'
 
 on:
@@ -20,38 +18,43 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
 
-    defaults:
-      run:
-        shell: bash
-        working-directory: ./terraform
-
     steps:
+      # Checkout the repository to the GitHub Actions runner
       - name: Checkout
         uses: actions/checkout@v4
 
+      # Install the latest version of Terraform CLI
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
 
+      # Initialize a new or existing Terraform working directory
       - name: Terraform Init
         id: init
         run: terraform init
+        working-directory: ./terraform
         env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
           ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
+      # Check that all Terraform configuration files adhere to a canonical format
       - name: Terraform Format
         id: fmt
         run: terraform fmt -check
+        working-directory: ./terraform
 
+      # Validate the Terraform configuration
       - name: Terraform Validate
         id: validate
         run: terraform validate -no-color
+        working-directory: ./terraform
 
+      # Generates an execution plan for Terraform
       - name: Terraform Plan
         id: plan
         run: terraform plan -no-color -input=false -out=tfplan
+        working-directory: ./terraform
         env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
@@ -59,6 +62,7 @@ jobs:
           ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         continue-on-error: true
 
+      # Create a comment on the PR with the plan output
       - name: Update Pull Request with Plan
         uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
@@ -95,9 +99,11 @@ jobs:
         env:
           PLAN: ${{ steps.plan.outputs.stdout }}
 
+      # On push to main, apply the Terraform configuration
       - name: Terraform Apply
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         run: terraform apply -auto-approve -input=false tfplan
+        working-directory: ./terraform
         env:
           ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
