--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -20,7 +20,7 @@ jobs:
     defaults:
       run:
         shell: bash
-        working-directory: ./terraform
+        working-directory: terraform
 
     steps:
       - name: Checkout
