--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -1,43 +1,37 @@
-name: 'Terraform Destroy'
+# .github/workflows/destroy.yml
+
+name: 'Terraform Manual Destroy'
 
 on:
   workflow_dispatch:
-    inputs:
-      confirmation:
-        description: 'Type "destroy" to confirm you want to tear down all infrastructure.'
-        required: true
-        default: 'do-not-destroy'
+
+permissions:
+  contents: read
 
 jobs:
   terraform_destroy:
     name: 'Terraform Destroy'
     runs-on: ubuntu-latest
-    
-    if: github.event.inputs.confirmation == 'destroy'
+    environment: production
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Azure Login
+        uses: azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.9.8 # Pinned version for consistency
+          terraform_version: 1.5.0
 
       - name: Terraform Init
         run: terraform init
         working-directory: ./terraform
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
 
       - name: Terraform Destroy
         run: terraform destroy -auto-approve
         working-directory: ./terraform
-        env:
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
