--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -26,15 +26,12 @@ jobs:
       - name: Azure login
         uses: azure/login@v1
         with:
-          client-id: ${{ secrets.ARM_CLIENT_ID }}
-          tenant-id: ${{ secrets.ARM_TENANT_ID }}
-          client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
-          subscription-id: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
         with:
-          terraform_version: 1.5.0
+          terraform_version: 1.9.8
 
       - name: Terraform Init
         run: terraform init
