--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,7 @@ permissions:
 jobs:
   terraform:
     runs-on: ubuntu-latest
+    environment: production
     defaults:
       run:
         working-directory: terraform
