line 18 edit destroy.yml

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -15,6 +15,7 @@ jobs:
   destroy:
     if: ${{ github.event.inputs.confirmation == 'destroy' }}
     runs-on: ubuntu-latest
+    environment: production
     defaults:
       run:
         working-directory: terraform
