Fix to all files.

--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -4,39 +4,27 @@ on:
   workflow_dispatch:
     inputs:
       confirmation:
-        description: 'Type "destroy" to confirm teardown.'
+        description: 'Upiši: destroy'
         required: true
-        default: 'do-not-destroy'
+        default: 'nope'
 
 permissions:
   contents: read
 
 jobs:
   destroy:
-    if: ${{ github.event.inputs.confirmation == 'destroy' }}
+    if: github.event.inputs.confirmation == 'destroy'
     runs-on: ubuntu-latest
     environment: production
-    defaults:
-      run:
-        working-directory: terraform
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Azure login
-        uses: azure/login@v1
+      - name: Azure login (service principal JSON)
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
-      - name: Download state from last successful Deploy run
-        uses: dawidd6/action-download-artifact@v6
-        with:
-          workflow: 'Terraform Deploy'
-          workflow_conclusion: success
-          name: tfstate-main
-          branch: main
-          path: terraform
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v3
@@ -44,7 +32,20 @@ jobs:
           terraform_version: 1.9.8
 
       - name: Terraform Init
-        run: terraform init -input=false -upgrade
+        run: terraform init
+
+      - name: Download state artifact from last deploy
+        uses: dawidd6/action-download-artifact@v3
+        with:
+          name: tfstate-main
+          path: .
+          # Ako ima više runova, uzima zadnji sa glavne grane:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: List files (debug)
+        run: ls -la
 
       - name: Terraform Destroy
-        run: terraform destroy -auto-approve -input=false
+        env:
+          TF_INPUT: 0
+        run: terraform destroy -auto-approve
