--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,16 @@ jobs:
   terraform:
     runs-on: ubuntu-latest
     environment: production
-    defaults:
-      run:
-        working-directory: terraform
+
+    env:
+      ARM_USE_OIDC: false
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Azure login
-        uses: azure/login@v1
+      - name: Azure login (service principal JSON)
+        uses: azure/login@v2
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
@@ -33,55 +33,65 @@ jobs:
           terraform_version: 1.9.8
 
       - name: Terraform Init
-        run: terraform init -input=false -upgrade
+        run: terraform init
 
-      - name: Terraform Format (check)
-        run: terraform fmt -check
+      - name: Terraform Format Check
+        run: terraform fmt -check -recursive
 
       - name: Terraform Validate
-        run: terraform validate -no-color
+        run: terraform validate
 
-      - name: Terraform Plan
-        run: terraform plan -no-color -input=false -out=tfplan
+      - name: Terraform Plan (PR)
+        if: github.event_name == 'pull_request'
+        run: terraform plan -no-color -out=tfplan.out | tee plan.txt
 
-      - name: Save human-readable plan
-        run: terraform show -no-color tfplan > plan.txt
-
-      - name: Upload plan artifact
+      - name: Upload Plan Artifact
+        if: github.event_name == 'pull_request'
         uses: actions/upload-artifact@v4
         with:
-          name: terraform-plan
-          path: terraform/plan.txt
+          name: tfplan
+          path: |
+            plan.txt
+            tfplan.out
+          retention-days: 14
 
-      - name: Comment PR with Plan
+      - name: Comment Plan on PR
         if: github.event_name == 'pull_request'
-        uses: actions/github-script@v7
+        uses: mshick/add-pr-comment@v2
         with:
-          script: |
-            const fs = require('fs');
-            const plan = fs.readFileSync('terraform/plan.txt','utf8');
-            const text = plan.length > 60000
-              ? "_(truncated to last 60k chars)_\n" + plan.slice(-60000)
-              : plan;
-            const body = "### Terraform Plan\n```hcl\n" + text + "\n```";
-            github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body
-            });
+          message-id: tf-plan
+          message: |
+            **Terraform Plan**:
+            ```
+            ${{ steps.plan.outputs.stdout || '' }}
+            ```
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Terraform Apply (on main)
+      - name: Terraform Plan (main)
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: terraform apply -auto-approve -input=false tfplan
+        run: terraform plan -no-color -out=tfplan.out
 
-      - name: Upload Terraform state (artifact)
+      - name: Terraform Apply (main)
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: terraform apply -auto-approve tfplan.out
+
+      - name: Upload Terraform State
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
         uses: actions/upload-artifact@v4
         with:
           name: tfstate-main
           path: |
-            terraform/terraform.tfstate
-            terraform/terraform.tfstate.backup
-            terraform/.terraform.lock.hcl
-          retention-days: 14
+            terraform.tfstate
+            terraform.tfstate.backup
+          retention-days: 30
+
+      # BONUS iz zadatka: post-deploy sample HTML na Web App
+      - name: Deploy Sample Web Page
+        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        run: |
+          RG_NAME=$(terraform output -raw resource_group_name)
+          APP_NAME=$(terraform output -raw web_app_name)
+          echo "<!DOCTYPE html><html><head><meta charset='utf-8'><title>OK</title></head><body><h1>Pozdrav iz Terraform-a 👋</h1><p>App je privatan i dostupan samo iz VNet-a.</p></body></html>" > index.html
+          zip site.zip index.html
+          az webapp deployment source config-zip --resource-group "$RG_NAME" --name "$APP_NAME" --src-path site.zip
