yml file changes

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,7 +52,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: terraform-plan
-          path: plan.txt
+          path: terraform/plan.txt
 
       - name: Comment PR with Plan
         if: github.event_name == 'pull_request'
@@ -60,7 +60,7 @@ jobs:
         with:
           script: |
             const fs = require('fs');
-            const plan = fs.readFileSync('plan.txt','utf8');
+            const plan = fs.readFileSync('terraform/plan.txt','utf8');
             const text = plan.length > 60000
               ? "_(truncated to last 60k chars)_\n" + plan.slice(-60000)
               : plan;
@@ -82,7 +82,7 @@ jobs:
         with:
           name: tfstate-main
           path: |
-            terraform.tfstate
-            terraform.tfstate.backup
-            .terraform.lock.hcl
+            terraform/terraform.tfstate
+            terraform/terraform.tfstate.backup
+            terraform/.terraform.lock.hcl
           retention-days: 14
